nullaway_error_4b100f0f-76bf-428a-b0d3-1922dbe8f9b4.txt
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:1054: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
